# ocaml-embed-file

./: ocaml-embed-file.opam
src/: dune  embed_file_lib.ml  embed_file_lib.mli
test/: dune  test_chunks.ml  test_filename_munging.ml  test_prog.ml
