opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ocaml-embed-file"
bug-reports: "https://github.com/janestreet/ocaml-embed-file/issues"
dev-repo: "git+https://github.com/janestreet/ocaml-embed-file.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ocaml-embed-file/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "async_kernel"
  "async_unix"
  "core"
  "core_unix"
  "ppx_jane"
  "dune"         {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Files contents as module constants"
description: "
Embed-file takes some files and generates code for an OCaml module
defining string constants containing the contents of those files.
"
